cart product items

--- a/index.html
+++ b/index.html
@@ -18,12 +18,73 @@
       </div>
     </header>
 
+    <!-- Shop Products -->
     <section class="shop container">
       <h2 class="section-title">Available Products</h2>
 
       <div class="shop-content">
+        <!-- product 1 -->
         <div class="product-box">
-          <img src="/images/product1.jpg" alt="" class="product-img" />
+          <img src="./images/product1.jpg" class="product-img" />
+          <h2 class="product-title">CUBAN TEE</h2>
+          <span class="price">₦5,000</span>
+          <i class="bx bx-shopping-bag add-cart"></i>
+        </div>
+
+        <!-- product 2 -->
+        <div class="product-box">
+          <img src="./images/product2.jpg" class="product-img" />
+          <h2 class="product-title">AIRWAVE PODS</h2>
+          <span class="price">₦7,200</span>
+          <i class="bx bx-shopping-bag add-cart"></i>
+        </div>
+
+        <!-- product 3 -->
+        <div class="product-box">
+          <img src="./images/product3.jpg" class="product-img" />
+          <h2 class="product-title">FLANNEL HOODS</h2>
+          <span class="price">₦15,400</span>
+          <i class="bx bx-shopping-bag add-cart"></i>
+        </div>
+
+        <!-- product 4 -->
+        <div class="product-box">
+          <img src="./images/product4.jpg" class="product-img" />
+          <h2 class="product-title">GLEAM WATERCAN</h2>
+          <span class="price">₦2,700</span>
+          <i class="bx bx-shopping-bag add-cart"></i>
+        </div>
+
+        <!-- product 5 -->
+        <div class="product-box">
+          <img src="./images/product5.jpg" class="product-img" />
+          <h2 class="product-title">QUEZAL SHADES</h2>
+          <span class="price">₦13,000</span>
+          <i class="bx bx-shopping-bag add-cart"></i>
+        </div>
+
+        <!-- product 6 -->
+        <div class="product-box">
+          <img src="./images/product6.jpg" class="product-img" />
+          <h2 class="product-title">TREFOIL BUCKETHATS</h2>
+          <span class="price">₦2,500</span>
+          <i class="bx bx-shopping-bag add-cart"></i>
+        </div>
+
+        <!-- product 7 -->
+        <div class="product-box">
+          <img src="./images/product7.jpg" class="product-img" />
+          <h2 class="product-title">COLLEGE BAGS</h2>
+          <span class="price">₦20,100</span>
+          <i class="bx bx-shopping-bag add-cart"></i>
+        </div>
+
+        <!-- product 8 -->
+        <div class="product-box">
+          <img src="./images/product8.jpg" class="product-img" />
+          <h2 class="product-title">NIKE AIRWAVE</h2>
+          <span class="price">₦37,200</span>
+          <i class="bx bx-shopping-bag add-cart"></i>
         </div>
       </div>
     </section>
