--- a/index.html
+++ b/index.html
@@ -15,6 +15,25 @@
         <a href="#" class="logo">ShopNow</a>
 
         <i class="bx bx-shopping-bag" id="cart-icon"></i>
+
+        <!-- shopping cart -->
+        <div class="cart">
+          <h2 class="cart-title">Your Cart</h2>
+
+          <div class="cart-content">
+            <div class="cart-box">
+              <img src="./images/product2.jpg" class="cart-img" />
+              <div class="detail-box">
+                <div class="cart-product-title">Earbuds</div>
+                <div class="cart-price">₦5,000</div>
+                <input type="number" value="1" class="cart-quantity" />
+              </div>
+
+              <!-- Remove cart -->
+              <i class="bx bxs-trash-alt cart-remove"></i>
+            </div>
+          </div>
+        </div>
       </div>
     </header>
 
