--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
               <i class="bx bxs-trash-alt cart-remove"></i>
             </div>
           </div>
+
+          <!-- Total -->
+          <div class="total">
+            <div class="total-title">Total</div>
+            <div class="total-price">₦0</div>
+          </div>
+
+          <!-- Buy button -->
+          <button type="button" class="btn-buy">Buy Now</button>
+
+          <!-- Close cart -->
+          <i class="bx bx-x" id="close-cart"></i>
         </div>
       </div>
     </header>
