--- a/index.html
+++ b/index.html
@@ -119,5 +119,8 @@
         </div>
       </div>
     </section>
+
+    <!-- Link Javascript file -->
+    <script src="./main.js"></script>
   </body>
 </html>
