--- a/index.html
+++ b/index.html
@@ -20,19 +20,7 @@
         <div class="cart">
           <h2 class="cart-title">Your Cart</h2>
 
-          <div class="cart-content">
-            <div class="cart-box">
-              <img src="./images/product2.jpg" class="cart-img" />
-              <div class="detail-box">
-                <div class="cart-product-title">Earbuds</div>
-                <div class="cart-price">₦5,000</div>
-                <input type="number" value="1" class="cart-quantity" />
-              </div>
-
-              <!-- Remove cart -->
-              <i class="bx bxs-trash-alt cart-remove"></i>
-            </div>
-          </div>
+          <div class="cart-content"></div>
 
           <!-- Total -->
           <div class="total">
@@ -58,7 +46,7 @@
         <div class="product-box">
           <img src="./images/product1.jpg" class="product-img" />
           <h2 class="product-title">CUBAN TEE</h2>
-          <span class="price">₦5,000</span>
+          <span class="price">₦5000</span>
           <i class="bx bx-shopping-bag add-cart"></i>
         </div>
 
@@ -66,7 +54,7 @@
         <div class="product-box">
           <img src="./images/product2.jpg" class="product-img" />
           <h2 class="product-title">AIRWAVE PODS</h2>
-          <span class="price">₦7,200</span>
+          <span class="price">₦7200</span>
           <i class="bx bx-shopping-bag add-cart"></i>
         </div>
 
@@ -74,7 +62,7 @@
         <div class="product-box">
           <img src="./images/product3.jpg" class="product-img" />
           <h2 class="product-title">FLANNEL HOODS</h2>
-          <span class="price">₦15,400</span>
+          <span class="price">₦15400</span>
           <i class="bx bx-shopping-bag add-cart"></i>
         </div>
 
@@ -82,7 +70,7 @@
         <div class="product-box">
           <img src="./images/product4.jpg" class="product-img" />
           <h2 class="product-title">GLEAM WATERCAN</h2>
-          <span class="price">₦2,700</span>
+          <span class="price">₦2700</span>
           <i class="bx bx-shopping-bag add-cart"></i>
         </div>
 
@@ -90,7 +78,7 @@
         <div class="product-box">
           <img src="./images/product5.jpg" class="product-img" />
           <h2 class="product-title">QUEZAL SHADES</h2>
-          <span class="price">₦13,000</span>
+          <span class="price">₦13000</span>
           <i class="bx bx-shopping-bag add-cart"></i>
         </div>
 
@@ -98,7 +86,7 @@
         <div class="product-box">
           <img src="./images/product6.jpg" class="product-img" />
           <h2 class="product-title">TREFOIL BUCKETHATS</h2>
-          <span class="price">₦2,500</span>
+          <span class="price">₦2500</span>
           <i class="bx bx-shopping-bag add-cart"></i>
         </div>
 
@@ -106,7 +94,7 @@
         <div class="product-box">
           <img src="./images/product7.jpg" class="product-img" />
           <h2 class="product-title">COLLEGE BAGS</h2>
-          <span class="price">₦20,100</span>
+          <span class="price">₦20100</span>
           <i class="bx bx-shopping-bag add-cart"></i>
         </div>
 
@@ -114,7 +102,7 @@
         <div class="product-box">
           <img src="./images/product8.jpg" class="product-img" />
           <h2 class="product-title">NIKE AIRWAVE</h2>
-          <span class="price">₦37,200</span>
+          <span class="price">₦37200</span>
           <i class="bx bx-shopping-bag add-cart"></i>
         </div>
       </div>
